menu superior sólo hamburguesa funcionando con apertura lateral

--- a/index.html
+++ b/index.html
@@ -12,19 +12,32 @@
 </head>
 
 <body>
-    <header class="header">
-        <nav>
-        <ul class="nav__ul">
-            <li><a class="nav__a" href="#excursiones">excursiones</a></li>
-            <li><a class="nav__a" href="#gastronomia"></i>gastronomía</a></li>
-            <li><a class="nav__a" href="#spa">spa</a></li>
-            <li><a class="nav__a" href="#paquetes">paquetes</a></li>
-            <li><a class="nav__a" href="#contacto">contacto</a></li>
+
+    <nav class="modal-menu" id="modal-menu">
+        <div class="cerrar-menu" id="cerrar-menu">
+            <div></div>
+            <div></div>
+        </div>
+        <ul class="nav">
+            <li><a href="#excursiones">excursiones</a></li>
+            <li><a href="#gastronomia"></i>gastronomía</a></li>
+            <li><a href="#spa">spa</a></li>
+            <li><a href="#paquetes">paquetes</a></li>
+            <li><a href="#contacto">contacto</a></li>
         </ul>
-        </nav>
-    </header>
+    </nav>
+
     <div class="container">
 
+
+        <div class="header">
+            <div class="abrir-menu" id="abrir-menu">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div>logo</div>
+        </div>
         <section class="apartados" id="excursiones">
             <div class="apartados__titulo">
                 <h2>EXCURSIONES</h2>
@@ -33,10 +46,13 @@
                 <div class="apartados__item">
                     <h3>buses turísticos</h3>
                     <div class="item__overlay">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dignissimos quos pariatur quis
-                            nulla nobis neque, laborum perspiciatis, modi eum voluptate eos nihil quo minima nam amet illo,
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dignissimos quos pariatur
+                            quis
+                            nulla nobis neque, laborum perspiciatis, modi eum voluptate eos nihil quo minima nam amet
+                            illo,
                             iusto omnis!</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum, eos voluptatem minus
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum, eos voluptatem
+                            minus
                             corrupti impedit sit assumenda tempore ab dolore omnis, aliquam nostrum recusandae a esse
                             doloremque quas quod illum.</p>
                     </div>
@@ -44,10 +60,13 @@
                 <div class="apartados__item">
                     <h3>trecking y aventura</h3>
                     <div class="item__overlay">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dignissimos quos pariatur quis
-                            nulla nobis neque, laborum perspiciatis, modi eum voluptate eos nihil quo minima nam amet illo,
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dignissimos quos pariatur
+                            quis
+                            nulla nobis neque, laborum perspiciatis, modi eum voluptate eos nihil quo minima nam amet
+                            illo,
                             iusto omnis!</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum, eos voluptatem minus
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum, eos voluptatem
+                            minus
                             corrupti impedit sit assumenda tempore ab dolore omnis, aliquam nostrum recusandae a esse
                             doloremque quas quod illum.</p>
                     </div>
@@ -55,10 +74,13 @@
                 <div class="apartados__item">
                     <h3>cabalgatas</h3>
                     <div class="item__overlay">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dignissimos quos pariatur quis
-                            nulla nobis neque, laborum perspiciatis, modi eum voluptate eos nihil quo minima nam amet illo,
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dignissimos quos pariatur
+                            quis
+                            nulla nobis neque, laborum perspiciatis, modi eum voluptate eos nihil quo minima nam amet
+                            illo,
                             iusto omnis!</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum, eos voluptatem minus
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum, eos voluptatem
+                            minus
                             corrupti impedit sit assumenda tempore ab dolore omnis, aliquam nostrum recusandae a esse
                             doloremque quas quod illum.</p>
                     </div>
@@ -74,10 +96,13 @@
                 <div class="apartados__item">
                     <h3>BUSES TURISTICOS</h3>
                     <div class="item__overlay">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dignissimos quos pariatur quis
-                            nulla nobis neque, laborum perspiciatis, modi eum voluptate eos nihil quo minima nam amet illo,
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dignissimos quos pariatur
+                            quis
+                            nulla nobis neque, laborum perspiciatis, modi eum voluptate eos nihil quo minima nam amet
+                            illo,
                             iusto omnis!</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum, eos voluptatem minus
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum, eos voluptatem
+                            minus
                             corrupti impedit sit assumenda tempore ab dolore omnis, aliquam nostrum recusandae a esse
                             doloremque quas quod illum.</p>
                     </div>
@@ -113,6 +138,7 @@
             <div class="apartados__item-turismo"></div>
         </section>
     </div>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
