algunas imagenes de muestra y logo en el centro, todo responsive

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:wght@200" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:wght@200&family=PT+Sans+Narrow:wght@400;700"
+        rel="stylesheet">
     <title>Turismo Cordillera</title>
     <link rel="stylesheet" href="./styles/index.css">
 </head>
@@ -29,21 +30,29 @@
 
     <div class="container">
 
-
+        <div class="abrir-menu" id="abrir-menu">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
         <div class="header">
-            <div class="abrir-menu" id="abrir-menu">
-                <div></div>
-                <div></div>
-                <div></div>
+
+            <div class="logo">
+                <div class="turismo">
+                    <p>turismo</p>
+                </div>
+                <div class="logo__img"><img src="./assets/logo.png" alt=""></div>
+                <div class="cordillera">
+                    <p>cordillera</p>
+                </div>
             </div>
-            <div>logo</div>
         </div>
         <section class="apartados" id="excursiones">
             <div class="apartados__titulo">
                 <h2>EXCURSIONES</h2>
             </div>
             <div class="apartados__cajas">
-                <div class="apartados__item">
+                <div class="apartados__item buses">
                     <h3>buses turísticos</h3>
                     <div class="item__overlay">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dignissimos quos pariatur
@@ -57,7 +66,7 @@
                             doloremque quas quod illum.</p>
                     </div>
                 </div>
-                <div class="apartados__item">
+                <div class="apartados__item trecking">
                     <h3>trecking y aventura</h3>
                     <div class="item__overlay">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dignissimos quos pariatur
@@ -71,7 +80,7 @@
                             doloremque quas quod illum.</p>
                     </div>
                 </div>
-                <div class="apartados__item">
+                <div class="apartados__item cabalgatas">
                     <h3>cabalgatas</h3>
                     <div class="item__overlay">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dignissimos quos pariatur
