modificación tamaño de letra en mobile view y foto arriba de todo

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 </div>
             </div>
         </div>
+        <section class="apartados__carousel"></section>
         <section class="apartados" id="excursiones">
             <div class="apartados__titulo">
                 <h2>EXCURSIONES</h2>
