organizando todo según el figma de Dani

--- a/index.html
+++ b/index.html
@@ -47,7 +47,18 @@
                 </div>
             </div>
         </div>
-        <section class="apartados__carousel"></section>
+        <section class="hero">
+            <div class="hero__item hero__item-sup">
+                <h1>Viví Mendoza</h1>
+            </div>
+            <div class="hero__item hero__item-inf">
+                <div>
+                    <p>Te acompañamos a disfrutar unas vacaciones inolvidables, en Mendoza o en el
+                        lugar del mundo que prefieras</p>
+                </div>
+                <div>Tenemos de todo para vos</div>
+            </div>
+        </section>
         <section class="apartados" id="excursiones">
             <div class="apartados__titulo">
                 <h2>EXCURSIONES</h2>
