parte superior igual a figma, falta el logo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:wght@200&family=PT+Sans+Narrow:wght@400;700"
+    <link
+        href="https://fonts.googleapis.com/css2?family=BenchNine:wght@300;400;700&family=Birthstone+Bounce:wght@400;500&display=swap"
         rel="stylesheet">
     <title>Turismo Cordillera</title>
     <link rel="stylesheet" href="./styles/index.css">
@@ -49,18 +50,26 @@
         </div>
         <section class="hero">
             <div class="hero__item hero__item-sup">
-                <h1>Viví Mendoza</h1>
+                <h1>¡Viví Mendoza!</h1>
             </div>
             <div class="hero__item hero__item-inf">
-                <div>
-                    <p>Te acompañamos a disfrutar unas vacaciones inolvidables, en Mendoza o en el
-                        lugar del mundo que prefieras</p>
-                </div>
-                <div>Tenemos de todo para vos</div>
+
+                <p>Te acompañamos a disfrutar unas vacaciones inolvidables, en Mendoza o en el
+                    lugar del mundo que prefieras</p>
+
+
+            </div>
+        </section>
+        <section class="intro">
+            <div class="intro__content">
+                <p>Tenemos todo lo que buscás</p>
+                <p><a href="#excursiones">EXCURSIONES</a> | <a href="#spa">SPA Y BIENESTAR</a> | <a
+                        href="#traslados">TRASLADOS</a> | <a href="#eventos">EVENTOS</a> | <a href="#paquetes">PAQUETES
+                        TURÍSTICOS</a></p>
             </div>
         </section>
         <section class="apartados" id="excursiones">
-            <div class="apartados__titulo">
+            <div class="apartados__titulo apartados__titulo-excursiones">
                 <h2>EXCURSIONES</h2>
             </div>
             <div class="apartados__cajas">
@@ -110,7 +119,7 @@
 
         </section>
         <section class="apartados" id="gastronomia">
-            <div class="apartados__titulo">
+            <div class="apartados__titulo apartados__titulo-gastronomia">
                 <h2>GASTRONOM&Iacute;A Y VINOS</h2>
             </div>
             <div class="apartados__cajas">
@@ -133,7 +142,7 @@
             </div>
         </section>
         <section class="apartados" id="spa">
-            <div class="apartados__titulo">
+            <div class="apartados__titulo apartados__titulo-spa">
                 <H2>SPA Y BIENESTAR</H2>
             </div>
             <div class="apartados__cajas">
@@ -143,7 +152,7 @@
             </div>
         </section>
         <section class="apartados" id="paquetes">
-            <div class="apartados__titulo">
+            <div class="apartados__titulo apartados__titulo-paquetes">
                 <h2>PAQUETES TUR&Iacute;STICOS</h2>
             </div>
             <div class="apartados__cajas">
@@ -153,7 +162,7 @@
             </div>
         </section>
         <section class="apartados" id="traslados">
-            <div class="apartados__titulo">
+            <div class="apartados__titulo apartados__titulo-traslados">
                 <h2>TURISMO</h2>
             </div>
             <div class="apartados__item-turismo"></div>
