--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=BenchNine:wght@300;400;700&family=Birthstone+Bounce:wght@400;500&display=swap"
+        href="https://fonts.googleapis.com/css2?family=BenchNine:wght@300;400;700&family=Montserrat&family=Birthstone+Bounce:wght@400;500&display=swap"
         rel="stylesheet">
     <title>Turismo Cordillera</title>
     <link rel="stylesheet" href="./styles/index.css">
@@ -36,7 +36,7 @@
             <div></div>
             <div></div>
         </div>
-        <div class="header">
+        <!-- <div class="header">
 
             <div class="logo">
                 <div class="turismo">
@@ -46,8 +46,8 @@
                 <div class="cordillera">
                     <p>cordillera</p>
                 </div>
-            </div>
-        </div>
+            </div> 
+        </div>-->
         <section class="hero">
             <div class="hero__item hero__item-sup">
                 <h1>¡Viví Mendoza!</h1>
@@ -55,14 +55,14 @@
             <div class="hero__item hero__item-inf">
 
                 <p>Te acompañamos a disfrutar unas vacaciones inolvidables, en Mendoza o en el
-                    lugar del mundo que prefieras</p>
+                    lugar del mundo que prefieras.</p>
 
 
             </div>
         </section>
         <section class="intro">
             <div class="intro__content">
-                <p>Tenemos todo lo que buscás</p>
+                <p>Tenemos todo lo que buscás.</p>
                 <p><a href="#excursiones">EXCURSIONES</a> | <a href="#spa">SPA Y BIENESTAR</a> | <a
                         href="#traslados">TRASLADOS</a> | <a href="#eventos">EVENTOS</a> | <a href="#paquetes">PAQUETES
                         TURÍSTICOS</a></p>
@@ -74,8 +74,14 @@
             </div>
             <div class="apartados__cajas">
                 <div class="apartados__item buses">
-                    <h3>buses turísticos</h3>
+                    <div class="apartados__h3">
+                        <h3>buses turísticos</h3>
+                    </div>
                     <div class="item__overlay">
+                        <div class="icono"><svg class="icon icon-bus">
+                                <use href="./assets/icons/iconos.svg#icon-bus"
+                                    xlink:href="./assets/icons/bus.svg#icon-bus"></use>
+                            </svg></div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dignissimos quos pariatur
                             quis
                             nulla nobis neque, laborum perspiciatis, modi eum voluptate eos nihil quo minima nam amet
@@ -88,8 +94,14 @@
                     </div>
                 </div>
                 <div class="apartados__item trecking">
-                    <h3>trecking y aventura</h3>
+                    <div class="apartados__h3">
+                        <h3>trecking y aventura</h3>
+                    </div>
                     <div class="item__overlay">
+                        <div class="icono"><svg class="icon icon-footprints">
+                                <use href="./assets/icons/iconos.svg#icon-footprints"
+                                    xlink:href="./assets/icons/bus.svg#icon-footprints"></use>
+                            </svg></div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dignissimos quos pariatur
                             quis
                             nulla nobis neque, laborum perspiciatis, modi eum voluptate eos nihil quo minima nam amet
@@ -102,8 +114,14 @@
                     </div>
                 </div>
                 <div class="apartados__item cabalgatas">
-                    <h3>cabalgatas</h3>
+                    <div class="apartados__h3">
+                        <h3>cabalgatas</h3>
+                    </div>
                     <div class="item__overlay">
+                        <div class="icono"><svg class="icon icon-horse">
+                                <use href="./assets/icons/iconos.svg#icon-horse"
+                                    xlink:href="./assets/icons/bus.svg#icon-horse"></use>
+                            </svg></div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dignissimos quos pariatur
                             quis
                             nulla nobis neque, laborum perspiciatis, modi eum voluptate eos nihil quo minima nam amet
@@ -123,9 +141,15 @@
                 <h2>GASTRONOM&Iacute;A Y VINOS</h2>
             </div>
             <div class="apartados__cajas">
-                <div class="apartados__item">
-                    <h3>BUSES TURISTICOS</h3>
+                <div class="apartados__item bodegas">
+                    <div class="apartados__h3">
+                        <h3>bodegas y viñedos</h3>
+                    </div>
                     <div class="item__overlay">
+                        <div class="icono"><svg class="icon icon-winebottle">
+                                <use href="./assets/icons/iconos.svg#icon-winebottle"
+                                    xlink:href="./assets/icons/bus.svg#icon-winebottle"></use>
+                            </svg></div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dignissimos quos pariatur
                             quis
                             nulla nobis neque, laborum perspiciatis, modi eum voluptate eos nihil quo minima nam amet
@@ -137,8 +161,46 @@
                             doloremque quas quod illum.</p>
                     </div>
                 </div>
-                <div class="apartados__item"></div>
-                <div class="apartados__item"></div>
+                <div class="apartados__item degustaciones">
+                    <div class="apartados__h3">
+                        <h3>degustaciones</h3>
+                    </div>
+                    <div class="item__overlay">
+                        <div class="icono"><svg class="icon icon-wineglass">
+                                <use href="./assets/icons/iconos.svg#icon-wineglass"
+                                    xlink:href="./assets/icons/bus.svg#icon-wineglass"></use>
+                            </svg></div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dignissimos quos pariatur
+                            quis
+                            nulla nobis neque, laborum perspiciatis, modi eum voluptate eos nihil quo minima nam amet
+                            illo,
+                            iusto omnis!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum, eos voluptatem
+                            minus
+                            corrupti impedit sit assumenda tempore ab dolore omnis, aliquam nostrum recusandae a esse
+                            doloremque quas quod illum.</p>
+                    </div>
+                </div>
+                <div class="apartados__item comidas">
+                    <div class="apartados__h3">
+                        <h3>COMIDAS</h3>
+                    </div>
+                    <div class="item__overlay">
+                        <div class="icono"><svg class="icon icon-food">
+                                <use href="./assets/icons/iconos.svg#icon-food"
+                                    xlink:href="./assets/icons/bus.svg#icon-food"></use>
+                            </svg></div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dignissimos quos pariatur
+                            quis
+                            nulla nobis neque, laborum perspiciatis, modi eum voluptate eos nihil quo minima nam amet
+                            illo,
+                            iusto omnis!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum, eos voluptatem
+                            minus
+                            corrupti impedit sit assumenda tempore ab dolore omnis, aliquam nostrum recusandae a esse
+                            doloremque quas quod illum.</p>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="apartados" id="spa">
