preparando todo para agregar página de productos

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=BenchNine:wght@300;400;700&family=Montserrat&family=Birthstone+Bounce:wght@400;500&display=swap"
         rel="stylesheet">
     <title>Turismo Cordillera</title>
+    <link rel="stylesheet" href="./styles/general.css">
     <link rel="stylesheet" href="./styles/index.css">
 </head>
 
@@ -54,7 +55,7 @@
             </div>
             <div class="hero__item hero__item-inf">
 
-                <p>Te acompañamos a disfrutar unas vacaciones inolvidables, en Mendoza o en el
+                <p>Te acompañamos a disfrutar unas vacaciones inolvidables, <br>en Mendoza o en el
                     lugar del mundo que prefieras.</p>
 
 
@@ -80,7 +81,7 @@
                     <div class="item__overlay">
                         <div class="icono"><svg class="icon icon-bus">
                                 <use href="./assets/icons/iconos.svg#icon-bus"
-                                    xlink:href="./assets/icons/bus.svg#icon-bus"></use>
+                                    xlink:href="./assets/icons/iconos.svg#icon-bus"></use>
                             </svg></div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dignissimos quos pariatur
                             quis
@@ -100,7 +101,7 @@
                     <div class="item__overlay">
                         <div class="icono"><svg class="icon icon-footprints">
                                 <use href="./assets/icons/iconos.svg#icon-footprints"
-                                    xlink:href="./assets/icons/bus.svg#icon-footprints"></use>
+                                    xlink:href="./assets/icons/iconos.svg#icon-footprints"></use>
                             </svg></div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dignissimos quos pariatur
                             quis
@@ -120,7 +121,7 @@
                     <div class="item__overlay">
                         <div class="icono"><svg class="icon icon-horse">
                                 <use href="./assets/icons/iconos.svg#icon-horse"
-                                    xlink:href="./assets/icons/bus.svg#icon-horse"></use>
+                                    xlink:href="./assets/icons/iconos.svg#icon-horse"></use>
                             </svg></div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dignissimos quos pariatur
                             quis
@@ -148,7 +149,7 @@
                     <div class="item__overlay">
                         <div class="icono"><svg class="icon icon-winebottle">
                                 <use href="./assets/icons/iconos.svg#icon-winebottle"
-                                    xlink:href="./assets/icons/bus.svg#icon-winebottle"></use>
+                                    xlink:href="./assets/icons/iconos.svg#icon-winebottle"></use>
                             </svg></div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dignissimos quos pariatur
                             quis
@@ -168,7 +169,7 @@
                     <div class="item__overlay">
                         <div class="icono"><svg class="icon icon-wineglass">
                                 <use href="./assets/icons/iconos.svg#icon-wineglass"
-                                    xlink:href="./assets/icons/bus.svg#icon-wineglass"></use>
+                                    xlink:href="./assets/icons/iconos.svg#icon-wineglass"></use>
                             </svg></div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dignissimos quos pariatur
                             quis
@@ -188,7 +189,7 @@
                     <div class="item__overlay">
                         <div class="icono"><svg class="icon icon-food">
                                 <use href="./assets/icons/iconos.svg#icon-food"
-                                    xlink:href="./assets/icons/bus.svg#icon-food"></use>
+                                    xlink:href="./assets/icons/iconos.svg#icon-food"></use>
                             </svg></div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dignissimos quos pariatur
                             quis
@@ -208,7 +209,27 @@
                 <H2>SPA Y BIENESTAR</H2>
             </div>
             <div class="apartados__cajas">
-                <div class="apartados__item"></div>
+                <div class="apartados__item spa">
+                    <div class="apartados__h3">
+                        <h3>SPA Y AGUAS TERMALES</h3>
+                    </div>
+                    <div class="item__overlay">
+                        <div class="icono"><svg class="icon icon-spa">
+                                <use href="./assets/icons/iconos.svg#icon-spa"
+                                    xlink:href="./assets/icons/iconos.svg#icon-spa"></use>
+                            </svg></div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dignissimos quos pariatur
+                            quis
+                            nulla nobis neque, laborum perspiciatis, modi eum voluptate eos nihil quo minima nam amet
+                            illo,
+                            iusto omnis!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum, eos voluptatem
+                            minus
+                            corrupti impedit sit assumenda tempore ab dolore omnis, aliquam nostrum recusandae a esse
+                            doloremque quas quod illum.</p>
+                    </div>
+
+                </div>
                 <div class="apartados__item"></div>
                 <div class="apartados__item"></div>
             </div>
