panel derecho funcionando

--- a/index.html
+++ b/index.html
@@ -37,18 +37,7 @@
             <div></div>
             <div></div>
         </div>
-        <!-- <div class="header">
 
-            <div class="logo">
-                <div class="turismo">
-                    <p>turismo</p>
-                </div>
-                <div class="logo__img"><img src="./assets/logo.png" alt=""></div>
-                <div class="cordillera">
-                    <p>cordillera</p>
-                </div>
-            </div> 
-        </div>-->
         <section class="hero">
             <div class="hero__item hero__item-sup">
                 <h1>¡Viví Mendoza!</h1>
@@ -92,6 +81,7 @@
                             minus
                             corrupti impedit sit assumenda tempore ab dolore omnis, aliquam nostrum recusandae a esse
                             doloremque quas quod illum.</p>
+                        <p class="vermas__p"><button class="vermas" id="verbuses">Ver más [+]</button></p>
                     </div>
                 </div>
                 <div class="apartados__item trecking">
@@ -112,9 +102,26 @@
                             minus
                             corrupti impedit sit assumenda tempore ab dolore omnis, aliquam nostrum recusandae a esse
                             doloremque quas quod illum.</p>
+                        <p><button class="vermas" id="vertrecking">Ver más [+]</button></p>
                     </div>
                 </div>
-                <div class="apartados__item cabalgatas">
+
+                <div class="apartados__extra verbuses">
+                    <div class="cerrar-extras" id="cerrar-extras">
+                        <div></div>
+                        <div></div>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dignissimos quos pariatur
+                        quis
+                        nulla nobis neque, laborum perspiciatis, modi eum voluptate eos nihil quo minima nam amet
+                        illo,
+                        iusto omnis!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum, eos voluptatem
+                        minus
+                        corrupti impedit sit assumenda tempore ab dolore omnis, aliquam nostrum recusandae a esse
+                        doloremque quas quod illum.</p>
+                </div>
+                <!-- <div class="apartados__item cabalgatas">
                     <div class="apartados__h3">
                         <h3>cabalgatas</h3>
                     </div>
@@ -133,7 +140,7 @@
                             corrupti impedit sit assumenda tempore ab dolore omnis, aliquam nostrum recusandae a esse
                             doloremque quas quod illum.</p>
                     </div>
-                </div>
+                </div> -->
             </div>
 
         </section>
@@ -182,7 +189,7 @@
                             doloremque quas quod illum.</p>
                     </div>
                 </div>
-                <div class="apartados__item comidas">
+                <!-- <div class="apartados__item comidas">
                     <div class="apartados__h3">
                         <h3>COMIDAS</h3>
                     </div>
@@ -201,7 +208,7 @@
                             corrupti impedit sit assumenda tempore ab dolore omnis, aliquam nostrum recusandae a esse
                             doloremque quas quod illum.</p>
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
         <section class="apartados" id="spa">
