izquierda y derecha funcionando

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
         </section>
         <section class="intro">
             <div class="intro__content">
-                <p>Tenemos todo lo que buscás.</p>
+                <p>Somos Turismo Cordillera, y estamos preparados para ayudarte a planificar unas vacaciones
+                    inolvidables, en Mendoza o en el lugar del mundo que prefieras. Te invitamos a conocer nuestros
+                    servicios:</p>
                 <p><a href="#excursiones">EXCURSIONES</a> | <a href="#spa">SPA Y BIENESTAR</a> | <a
                         href="#traslados">TRASLADOS</a> | <a href="#eventos">EVENTOS</a> | <a href="#paquetes">PAQUETES
                         TURÍSTICOS</a></p>
@@ -63,28 +65,24 @@
                 <h2>EXCURSIONES</h2>
             </div>
             <div class="apartados__cajas">
-                <div class="apartados__item buses">
+
+                <div class="apartados__item apartados__item--izquierda buses">
                     <div class="apartados__h3">
-                        <h3>buses turísticos</h3>
+                        <h3>Ecoturismo y aventura</h3>
                     </div>
                     <div class="item__overlay">
                         <div class="icono"><svg class="icon icon-bus">
                                 <use href="./assets/icons/iconos.svg#icon-bus"
                                     xlink:href="./assets/icons/iconos.svg#icon-bus"></use>
                             </svg></div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dignissimos quos pariatur
-                            quis
-                            nulla nobis neque, laborum perspiciatis, modi eum voluptate eos nihil quo minima nam amet
-                            illo,
-                            iusto omnis!</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum, eos voluptatem
-                            minus
-                            corrupti impedit sit assumenda tempore ab dolore omnis, aliquam nostrum recusandae a esse
-                            doloremque quas quod illum.</p>
-                        <p class="vermas__p"><button class="vermas" id="verbuses">Ver más [+]</button></p>
+                        <p>Recorre hermosos senderos y enfrenta nuevos desafíos en la naturaleza con nuestras
+                            excursiones de trekking y aventura.</p>
+                        <p class="vermas__p vermas__p--derecha"><button class="vermas vermas__derecha" id="verbuses">Ver
+                                más [+]</button>
+                        </p>
                     </div>
                 </div>
-                <div class="apartados__item trecking">
+                <div class="apartados__item apardados__item--derecha trecking">
                     <div class="apartados__h3">
                         <h3>trecking y aventura</h3>
                     </div>
@@ -93,20 +91,14 @@
                                 <use href="./assets/icons/iconos.svg#icon-footprints"
                                     xlink:href="./assets/icons/iconos.svg#icon-footprints"></use>
                             </svg></div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dignissimos quos pariatur
-                            quis
-                            nulla nobis neque, laborum perspiciatis, modi eum voluptate eos nihil quo minima nam amet
-                            illo,
-                            iusto omnis!</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum, eos voluptatem
-                            minus
-                            corrupti impedit sit assumenda tempore ab dolore omnis, aliquam nostrum recusandae a esse
-                            doloremque quas quod illum.</p>
-                        <p><button class="vermas" id="vertrecking">Ver más [+]</button></p>
+
+                        <p class="vermas__p vermas__p--izquierda"><button class="vermas vermas__izquierda"
+                                id="vertrecking">Ver más
+                                [+]</button>
+                        </p>
                     </div>
                 </div>
-
-                <div class="apartados__extra verbuses">
+                <div class="apartados__extra vertrecking extra__izquierda">
                     <div class="cerrar-extras" id="cerrar-extras">
                         <div></div>
                         <div></div>
@@ -121,6 +113,33 @@
                         corrupti impedit sit assumenda tempore ab dolore omnis, aliquam nostrum recusandae a esse
                         doloremque quas quod illum.</p>
                 </div>
+                <div class="apartados__extra verbuses extra__derecha">
+                    <div class="cerrar-extras" id="cerrar-extras">
+                        <div></div>
+                        <div></div>
+                    </div>
+                    <p>Recorre hermosos senderos y enfrenta nuevos desafíos en la naturaleza con nuestras
+                        excursiones de trekking y aventura.</p>
+                    <ul>
+                        <li>Excursión Villavicencio Andestruck</li>
+                        <li>Alta Montaña y Cacheuta</li>
+                        <li>Caverna de las Brujas, Cascada Manqui Malal y Volcán Malacara</li>
+                        <li>Día de Playa en el corazón de la cordillera</li>
+                        <li>Encuentro de Druidas</li>
+                        <li>Multiaventura rappel Cacheuta + Cabalgata</li>
+                        <li>Experiencia 4x4</li>
+                        <li>Cascada de Manqui Malal</li>
+                        <li>Payunia 4x4</li>
+                        <li>Pesca con mosca</li>
+                        <li>Volcán Malacara y Laguna de Llancanelo</li>
+                        <li>Treck Adolfo Calle & Stepanek</li>
+                        <li>Cordón del plata</li>
+                        <li>Cabalgata al atardecer</li>
+                        <li>Pampa del Melocotón a caballo</li>
+                        <li>Malargüe con cabalgata o trekking</li>
+                    </ul>
+                </div>
+
                 <!-- <div class="apartados__item cabalgatas">
                     <div class="apartados__h3">
                         <h3>cabalgatas</h3>
